tests/error/quotientInteger-wrong-1st-argument-string.uplc
(program 1.0.0[[(builtin quotientInteger)(con string "Ola")](con integer 10)])